--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 <div class="card-container" id="cardContainer">
     <div class="card" id="card">
         <div class="card-face card-front">
-            <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=400&h=400&fit=crop&crop=center" alt="Immagine esempio" class="card-image">
-            <h2 class="card-title">Esperienza Unica</h2>
-            <p class="card-subtitle">Scorri per scoprire di più</p>
+            <video class="card-video" autoplay muted loop playsinline>
+                <source src="tateVideo.mp4" type="video/mp4">
+                Il tuo browser non supporta il video.
+            </video>
+            <p class="card-subtitle">Ora sei ufficialmente un</p>
+            <h2 class="card-title">BIMBO LAUREATO</h2>
         </div>
         <div class="card-face card-back">
             <h2 class="card-title">La Storia</h2>
