[Fix] Index, style, script [Add] tateVideo.mp4

--- a/index.html
+++ b/index.html
@@ -16,30 +16,52 @@
 
 <div class="card-container" id="cardContainer">
     <div class="card" id="card">
+
+        <!-- FRONT -->
+
         <div class="card-face card-front">
-            <video class="card-video" autoplay muted loop playsinline>
-                <source src="tateVideo.mp4" type="video/mp4">
-                Il tuo browser non supporta il video.
-            </video>
+            <div class="card-video">
+                <video class="card-video" autoplay muted loop playsinline>
+                    <source src="tateVideo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <p class="card-subtitle">Ora sei ufficialmente un</p>
             <h2 class="card-title">BIMBO LAUREATO</h2>
         </div>
+
+        <!-- BACK -->
+
         <div class="card-face card-back">
-            <h2 class="card-title">La Storia</h2>
-            <p class="card-text">
-                Questa è una card interattiva che puoi ruotare con un semplice swipe a destra o a sinistra.
-                <br><br>
-                Il design è moderno e fluido, perfetto per dispositivi mobile. Puoi personalizzare completamente
-                il contenuto, le immagini e i colori secondo le tue esigenze.
-                <br><br>
-                L'animazione è fluida e responsive, garantendo un'esperienza utente ottimale su tutti i dispositivi.
-            </p>
+<!--            <h2 class="card-title">La Storia</h2>-->
+            <div class="card-text">
+                <span style="margin-bottom: 15px;">
+                    Hey tu, <span style="font-family: 'Freestyle Script'; font-size: 30px; margin-left: 4px"> Matti </span>
+                </p>
+                <p style="margin-bottom: 15px;">
+                    Oggi è un giorno molto importante per te, pensavi di non farcela eppure eccoti qui.
+                    Guardati, <span style="font-family: 'Freestyle Script'; font-size: 28px; line-height: 1; vertical-align: baseline;">come sei felice!</span>
+                </p>
+                <p style="margin-bottom: 15px;">
+                    Non ci conosciamo da tanto, ma in poco tempo sei riuscito ad essere cosi <span style="font-family: 'Freestyle Script'; font-size: 28px; line-height: 1; vertical-align: baseline;">importante</span> per me e questo tuo traguardo lo sento un po' mio,
+                    non per il lavoro svolto ma per la soddisfazione nel vederti finalmente raggiungere questo tuo obiettivo nonostante tutti gli alti e bassi.
+                </p>
+                <p style="margin-bottom: 15px;">
+                    Ora devi correre, ancora più forte, perché <span style="font-family: 'Freestyle Script'; font-size: 28px; line-height: 1; vertical-align: baseline;">ne sei capace!</span> Ed io sarò qui, se anche tu lo vorrai, a supportarti.
+                </p>
+                    <p style="margin-bottom: 15px; font-style: italic">
+                        Auguri per la tua laurea piccolo scemotto!!! </p>
+                <div style="text-align: right; margin-top: 30px;">
+                    Ti voglio bene,<br>
+                    <p style="font-family: 'Freestyle Script'; font-size: 40px; margin-top:-10px"> Vito </p>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="swipe-indicator">
         <span class="swipe-arrow">←</span>
-        <span>Scorri per girare</span>
+        <span>Scorri o clicca per girare</span>
         <span class="swipe-arrow">→</span>
     </div>
 </div>
