--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card-face card-back">
 <!--            <h2 class="card-title">La Storia</h2>-->
             <div class="card-text">
-                <span style="margin-bottom: 15px;">
+                <p style="margin-bottom: 15px;">
                     Hey tu, <span style="font-family: 'Freestyle Script'; font-size: 30px; margin-left: 4px"> Matti </span>
                 </p>
                 <p style="margin-bottom: 15px;">
